traefik/traefik/local-only.middleware.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: local-only
  namespace: traefik
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.0.0/16
      - 172.16.0.0/12
      - 10.0.0.0/8
...
