traefik/traefik/metrics.ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-metrics
  namespace: traefik
  annotations:
    link.argocd.argoproj.io/external-link: "https://traefik-metrics.argocd-k3s-test.panzer1119.de"
    external-dns.alpha.kubernetes.io/target: "traefik.argocd-k3s-test.panzer1119.de"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik-metrics.argocd-k3s-test.panzer1119.de`) && Path(`/metrics`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: traefik
        - name: local-only
          namespace: traefik
        - name: authelia
          namespace: traefik
      services:
        - kind: TraefikService
          name: prometheus@internal
...
